# kamino-playground

./: .gitignore  Anchor.toml  Cargo.toml  Makefile
crates/kamino-lend/: Cargo.toml
crates/kamino-lend/src/: lib.rs
devshell/: default.nix
example/: Cargo.toml
example/src/: kamino.rs  main.rs  pyth.rs  token.rs
idl/: kamino_lending.json
programs/kamino-playground/: Cargo.toml
programs/kamino-playground/src/: lib.rs
programs/kamino-playground/src/instructions/: initialize.rs
programs/kamino-playground/src/state/: mod.rs
tests/: Cargo.toml
tests/src/: test_initialize.rs
