[package]
name    = "example"
version = "0.1.0"
edition = "2021"

[dependencies]
anchor-client                = "0.30.0"
anchor-spl                   = { version = "0.30.0", features = ["idl-build"] }
kamino-lend                  = { path = "../crates/kamino-lend" }
spl-token                    = "4.0.0"
spl-associated-token-account = "3.0.2"
encoding_rs                  = "0.8.34"
base64                       = "0.22.1"
pyth-sdk-solana              = "0.10.1"
#kamino-lending-sdk = { path = "../crates/kamino_lending" }
